# importlib_resources

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES.rst  DEVELOPER.rst  LICENSE  MANIFEST.in  NEWS.rst  README.md  README.rst  coverage.ini  coverplug.py  flit.ini  hook-importlib_resources.py  mypy.ini  pyproject.toml  pyproject.toml.aside  release.sh  setup.cfg  setup.py  tox.ini  update-setup.py  update-tests.py  update-zips.py  version.py
.github/: FUNDING.yml
.github/workflows/: main.yml
Lib/importlib/: _common.py  abc.py  readers.py  resources.py
Lib/importlib/resources/: _common.py  readers.py  simple.py
Lib/test/test_importlib/: test_resource.py
Lib/test/test_importlib/resources/: test_custom.py  test_files.py  test_reader.py
docs/: api.rst  changelog.rst  conf.py  index.rst  migration.rst  using.rst
hydra_plugins/: dummy_plugin.py
importlib_resources/: __init__.py  _adapters.py  _common.py  _compat.py  _functools.py  _itertools.py  _legacy.py  _pathlib.py  _py2.py  _py3.py  _traversable.py  _typing.py  _util.py  abc.py  namespace.py  readers.py  simple.py  trees.py
importlib_resources/compat/: py38.py
importlib_resources/docs/: abc.rst  api.rst  changelog.rst  conf.py  index.rst  migration.rst  using.rst
importlib_resources/future/: adapters.py
importlib_resources/tests/: _compat.py  py27compat.py  test_abc.py  test_compatibilty_files.py  test_contents.py  test_files.py  test_functional.py  test_open.py  test_path.py  test_read.py  test_reader.py  test_resource.py  test_util.py  update-zips.py  util.py  zip.py
importlib_resources/tests/compat/: py39.py
importlib_resources/tests/data/: utf-16.file
importlib_resources/tests/namespacedata01/submodule/: inner.txt
newsfragments/: +.feature.rst  +0f77c990.bugfix.rst  +13deb64a.feature.rst  +4c8e90fb.bugfix.rst  +c8cc7ec5.bugfix.rst  257.bugfix.rst  285.bugfix.rst  287.bugfix.rst  293.bugfix.rst  295.feature.rst  298.bugfix.rst  303.feature.rst  311.bugfix.rst  312.bugfix.rst  317.feature.rst  321.bugfix.rst  323.bugfix.rst  331.feature.rst  80.removal.rst
test/: test.py
test/config/: run.yaml
