# NOTE: Our tox testing environment requires a setup.py, but that's the only
# thing that does.  Consider the pyproject.toml the single source of truth,
# since we are going to generate the setup.py from it.  It also requires a
# little bit of manual tweaking.
#
# If you modify this file, you MUST run ./update-setup.py

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "importlib_resources"
author = "Barry Warsaw"
author-email = "barry@python.org"
home-page = "http://importlib-resources.readthedocs.io/"
description-file = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    ]
requires-python = '>=2.7,!=3.0,!=3.1,!=3.2,!=3.3'
requires = [
    "pathlib2; python_version < '3'",
    "typing; python_version < '3.5'",
    ]